js/src/tests/test262/language/statements/class/elements/syntax/early-errors/invalid-names/method-member-expression-this.js
DONOTEVALUATE
(
)
;
class
C
{
m
(
)
{
this
.
#
x
}
}
